<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipeRefreshLayout1"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/background"
            android:scaleType="centerCrop"/>
        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:columnCount="4">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textColor="#fff"
                android:text="@string/AEDlong"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textColor="#fff"
                android:text="@string/AEDshort"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textColor="#fff"
                android:text="@string/colon"/>
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:padding="10dp"
                android:textColor="#fff"
                android:id="@+id/aedTextView"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textColor="#fff"
                android:text="@string/BTClong"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textColor="#fff"
                android:text="@string/BTCshort"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textColor="#fff"
                android:text="@string/colon"/>
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:padding="10dp"
                android:textColor="#fff"
                android:id="@+id/btcTextView"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textColor="#fff"
                android:text="@string/CADlong"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textColor="#fff"
                android:text="@string/CADshort"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textColor="#fff"
                android:text="@string/colon"/>
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:padding="10dp"
                android:textColor="#fff"
                android:id="@+id/cadTextView"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textColor="#fff"
                android:text="@string/CNYlong"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textColor="#fff"
                android:text="@string/CNYshort"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textColor="#fff"
                android:text="@string/colon"/>
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:padding="10dp"
                android:textColor="#fff"
                android:id="@+id/cnyTextView"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textColor="#fff"
                android:text="@string/CLPlong"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textColor="#fff"
                android:text="@string/CLPshort"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textColor="#fff"
                android:text="@string/colon"/>
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:padding="10dp"
                android:textColor="#fff"
                android:id="@+id/clpTextView"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textColor="#fff"
                android:text="@string/EGPlong"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textColor="#fff"
                android:text="@string/EGPshort"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textColor="#fff"
                android:text="@string/colon"/>
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:padding="10dp"
                android:textColor="#fff"
                android:id="@+id/egpTextView"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textColor="#fff"
                android:text="@string/EURlong"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textColor="#fff"
                android:text="@string/EURshort"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textColor="#fff"
                android:text="@string/colon"/>
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:padding="10dp"
                android:textColor="#fff"
                android:id="@+id/eurTextView"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textColor="#fff"
                android:text="@string/IDRlong"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textColor="#fff"
                android:text="@string/IDRshort"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textColor="#fff"
                android:text="@string/colon"/>
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:padding="10dp"
                android:textColor="#fff"
                android:id="@+id/idrTextView"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textColor="#fff"
                android:text="@string/MADlong"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textColor="#fff"
                android:text="@string/MADshort"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textColor="#fff"
                android:text="@string/colon"/>
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:padding="10dp"
                android:textColor="#fff"
                android:id="@+id/madTextView"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textColor="#fff"
                android:text="@string/SARlong"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textColor="#fff"
                android:text="@string/SARshort"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textColor="#fff"
                android:text="@string/colon"/>
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:padding="10dp"
                android:textColor="#fff"
                android:id="@+id/sarTextView"/>

        </GridLayout>
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/loadingProgresBar"/>
    </FrameLayout>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>